# cppFlowATR

./: .gitignore  CMakeLists copy.txt  CMakeLists windows.txt  CMakeLists.txt  CMakeLists_jetson.txt  CMakeLists_linux.txt  config.ini  main.cpp  readme.md  readme.txt  sampleIni.txt  scrRun.sh
config/: config.ini  configATR_Feb2020.json  configATR_Feb2020_linux.json  configATR_Feb2020_linux_jetson.json  configATR_Feb2020_win.json  configATR_June2020_linux.json  configATR_June2020_linux_jetson.json  configATR_May2020_linux.json  configATR_May2020_linux_jetson.json  configATR_May2020_win.json  samplejson.json
include/cppflow/: Model.h
include/cppflowATR/: InitParams.h  InterfaceATR.h
include/cppflowATRInterface/: Object_Detection_API.h  Object_Detection_Handler.h  Object_Detection_Types.h
include/cppflowCM/: InterfaceCM.h  InterfaceCMTrt.h  InterfaceCMbase.h
include/utils/: imgUtils.h  odUtils.h  trt_buffers.h  trt_loguru_wrapper.h
python_scripts/: convert_H5.py  convert_ckp.py
python_scripts/mnist/: train_model.py
src/: INIReader.cpp  InitParams.cpp  InterfaceATR.cpp  InterfaceCM.cpp  InterfaceCMTrt.cpp  Model.cpp  Object_Detection_API.cpp  Object_Detection_Handler.cpp  Object_Detection_Types.cpp  Tensor.cpp  imgUtils.cpp  ini.c  loguru.cpp  main_ATR.cpp  main_like_coco.cpp  odUtils.cpp
tests/: NV12toTIFF.cpp  convertYUVtoRGB_test.cpp  debug_mode_test.cpp  jsonTest.cpp  logtest.cpp  main_ATR.cpp  main_like_coco.cpp  main_like_coco_playground.cpp  sizeMatching_test.cpp  spliced_video_test.cpp  testATRinference.cpp  testCmake.cpp  testColorNet.cpp  testIniFromJson.cpp  testLikeMnist.cpp  testMultiModels.cpp  testOnFolderRecurse.cpp  testSizeFilter.cpp  testStress.cpp  testStressSmall.cpp  testStressSmall_NV12.cpp  testThread.cpp  testTileImages.cpp  testUtils.cpp  test_itay.cpp  testvideo.cpp  videoTest.cpp
